# spotify-playlist-notification

backend/: Cargo.toml
backend/src/: discord.rs  dynamodb.rs  main.rs  spotify.rs  user.rs
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
